// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-1] feat PR: unfound when: [apply] --into prod --apply then: exit 2: crickets, hint push 1`] = `
"🐢 crickets...

🫧 no open branch pr
   ├─ turtle/feature-x
   └─ [2mhint: use git.commit.push to push and findsert pr[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-1] feat PR: unfound when: [plan] --into prod then: exit 2: crickets, hint push 1`] = `
"🐢 crickets...

🫧 no open branch pr
   ├─ turtle/feature-x
   └─ [2mhint: use git.commit.push to push and findsert pr[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-1] feat PR: unfound when: [watch] --into prod --watch then: exit 2: crickets, hint push 1`] = `
"🐢 crickets...

🫧 no open branch pr
   ├─ turtle/feature-x
   └─ [2mhint: use git.commit.push to push and findsert pr[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-4] feat PR: inflight when: [apply] --into prod --apply with transitions then: watch cycles then merged, continue to release 1`] = `
"🐢 cowabunga!

🐚 git.release --into prod --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 🐢 1 check(s) in progress
   ├─ 🌴 automerge enabled [added]
   └─ 🥥 let's watch
      ├─ 💤 1 left, Xs in action, Xs watched
      └─ ✨ done! Xs in action, Xs watched

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   ├─ 🌴 automerge enabled [added]
   └─ 🥥 let's watch
      ├─ 💤 1 left, Xs in action, Xs watched
      └─ ✨ done! Xs in action, Xs watched

🫧 and then...

🌊 release: v1.3.0
   ├─ 🐢 1 check(s) in progress
   └─ 🥥 let's watch
      ├─ 💤 publish.yml, Xs in action, Xs watched
      └─ ✨ done! publish.yml, Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-4] feat PR: inflight when: [plan] --into prod then: exit 0: show progress 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 🐢 1 check(s) in progress
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ [2mhint: use --apply to enable automerge and watch[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-4] feat PR: inflight when: [watch] --into prod --watch with transitions then: watch cycles then result 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --watch

🌊 release: feat(ocean): add surfboards
   ├─ 🐢 1 check(s) in progress
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ 🥥 let's watch
      ├─ 💤 1 left, Xs in action, Xs watched
      ├─ 💤 1 left, Xs in action, Xs watched
      ├─ 💤 1 left, Xs in action, Xs watched
      ├─ 💤 1 left, Xs in action, Xs watched
      └─ ✨ done! Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-7] feat PR: passed:wout-automerge when: [apply] --into prod --apply then: exit 0: automerge added, merged, continue to release 1`] = `
"🐢 cowabunga!

🐚 git.release --into prod --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🌴 automerge enabled [added]
   └─ 🥥 let's watch
      ├─ 💤 1 left, Xs in action, Xs watched
      └─ ✨ done! Xs in action, Xs watched

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   ├─ 🌴 automerge enabled [added]
   └─ 🥥 let's watch
      ├─ 💤 1 left, Xs in action, Xs watched
      └─ ✨ done! Xs in action, Xs watched

🫧 and then...

🌊 release: v1.3.0
   ├─ 👌 all checks passed
   └─ 🥥 let's watch
      ├─ 🫧 no runs inflight
      └─ ✨ done! publish.yml, Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-7] feat PR: passed:wout-automerge when: [plan] --into prod then: exit 0: passed, hint apply 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ [2mhint: use --apply to enable automerge and watch[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-7] feat PR: passed:wout-automerge when: [watch] --into prod --watch then: exit 0: passed (no watch needed) 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ 🥥 let's watch
      ├─ 🫧 no runs inflight
      └─ ✨ done! Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-10] feat PR: passed:with-automerge when: [apply] --into prod --apply then: exit 0: automerge found, merged, continue to release 1`] = `
"🐢 cowabunga!

🐚 git.release --into prod --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🌴 automerge enabled [found]
   └─ 🥥 let's watch
      ├─ 💤 await automerge, Xs in action, Xs watched
      ├─ 💤 await automerge, Xs in action, Xs watched
      └─ ✨ done! Xs in action, Xs watched

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   ├─ 🌴 automerge enabled [added]
   └─ 🥥 let's watch
      ├─ 💤 1 left, Xs in action, Xs watched
      └─ ✨ done! Xs in action, Xs watched

🫧 and then...

🌊 release: v1.3.0
   ├─ 👌 all checks passed
   └─ 🥥 let's watch
      ├─ 🫧 no runs inflight
      └─ ✨ done! publish.yml, Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-10] feat PR: passed:with-automerge when: [plan] --into prod then: exit 0: passed, automerge found 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🌴 automerge enabled [found]
   └─ [2mhint: use --apply to watch[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-10] feat PR: passed:with-automerge when: [watch] --into prod --watch then: exit 0: watch then merged, continue to release 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🌴 automerge enabled [found]
   └─ 🥥 let's watch
      ├─ 💤 await automerge, Xs in action, Xs watched
      ├─ 💤 await automerge, Xs in action, Xs watched
      └─ ✨ done! Xs in action, Xs watched

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ 🥥 let's watch
      ├─ 🫧 no runs inflight
      └─ ✨ done! Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-13] feat PR: failed when: [apply] --into prod --apply then: exit 2: failed, hint retry 1`] = `
"🐢 cowabunga!

🐚 git.release --into prod --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 test
   │        ├─ https://github.com/test/repo/actions/runs/123
   │        └─ publish
   ├─ 🌴 automerge unfound (use --apply to add)
   ├─ [2mhint: use --retry to rerun failed workflows[0m
   └─ [2mhint: use rhx show.gh.test.errors to see test output[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-13] feat PR: failed when: [plan] --into prod then: exit 2: failed, hint retry 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 test
   │        ├─ https://github.com/test/repo/actions/runs/123
   │        └─ publish
   ├─ 🌴 automerge unfound (use --apply to add)
   ├─ [2mhint: use --retry to rerun failed workflows[0m
   └─ [2mhint: use rhx show.gh.test.errors to see test output[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-13] feat PR: failed when: [watch] --into prod --watch then: exit 2: failed, hint retry 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --watch

🌊 release: feat(ocean): add surfboards
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 test
   │        ├─ https://github.com/test/repo/actions/runs/123
   │        └─ publish
   ├─ 🌴 automerge unfound (use --apply to add)
   ├─ [2mhint: use --retry to rerun failed workflows[0m
   └─ [2mhint: use rhx show.gh.test.errors to see test output[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-16r] feat PR: failed with --retry when: [apply+retry] --into prod --retry --apply then: exit 0: rerun triggered then apply to success 1`] = `
"🐢 cowabunga!

🐚 git.release --into prod --mode apply --watch --retry

🌊 release: feat(ocean): add surfboards
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 test
   │        ├─ https://github.com/test/repo/actions/runs/123
   │        ├─ publish
   │        └─ 👌 rerun triggered
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ 🥥 let's watch
      ├─ 💤 1 left, Xs in action, Xs watched
      ├─ 💤 1 left, Xs in action, Xs watched
      └─ ✨ done! Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-16r] feat PR: failed with --retry when: [plan+retry] --into prod --retry then: exit 0: rerun triggered, hint watch 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --mode plan --retry

🌊 release: feat(ocean): add surfboards
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 test
   │        ├─ https://github.com/test/repo/actions/runs/123
   │        ├─ publish
   │        └─ 👌 rerun triggered
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ [2mhint: use --watch to monitor rerun progress[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-16r] feat PR: failed with --retry when: [watch+retry] --into prod --retry --watch then: exit 0: rerun triggered then watch to success 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --watch --retry

🌊 release: feat(ocean): add surfboards
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 test
   │        ├─ https://github.com/test/repo/actions/runs/123
   │        ├─ publish
   │        └─ 👌 rerun triggered
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ 🥥 let's watch
      ├─ 💤 1 left, Xs in action, Xs watched
      ├─ 💤 1 left, Xs in action, Xs watched
      └─ ✨ done! Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-19] feat PR: rebase:behind when: [apply] --into prod --apply then: exit 2: needs rebase 1`] = `
"🐢 cowabunga!

🐚 git.release --into prod --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🐚 needs rebase
   │  └─ [2mhint: rhx git.branch.rebase begin[0m
   └─ 🌴 automerge unfound (use --apply to add)
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-19] feat PR: rebase:behind when: [plan] --into prod then: exit 2: needs rebase 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🐚 needs rebase
   │  └─ [2mhint: rhx git.branch.rebase begin[0m
   └─ 🌴 automerge unfound (use --apply to add)
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-19] feat PR: rebase:behind when: [watch] --into prod --watch then: exit 2: needs rebase 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🐚 needs rebase
   │  └─ [2mhint: rhx git.branch.rebase begin[0m
   └─ 🌴 automerge unfound (use --apply to add)
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-19] feat PR: rebase:dirty when: [apply] --into prod --apply then: exit 2: needs rebase with conflicts 1`] = `
"🐢 cowabunga!

🐚 git.release --into prod --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🐚 needs rebase, has conflicts
   │  └─ [2mhint: rhx git.branch.rebase begin[0m
   └─ 🌴 automerge unfound (use --apply to add)
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-19] feat PR: rebase:dirty when: [plan] --into prod then: exit 2: needs rebase with conflicts 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🐚 needs rebase, has conflicts
   │  └─ [2mhint: rhx git.branch.rebase begin[0m
   └─ 🌴 automerge unfound (use --apply to add)
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-19] feat PR: rebase:dirty when: [watch] --into prod --watch then: exit 2: needs rebase with conflicts 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   ├─ 🐚 needs rebase, has conflicts
   │  └─ [2mhint: rhx git.branch.rebase begin[0m
   └─ 🌴 automerge unfound (use --apply to add)
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-22] feat PR: merged, release PR: unfound (found after wait) when: [apply] --into prod --apply then: exit 0: merged, release PR found after await, apply to merged 1`] = `
"🐢 cowabunga!

🐚 git.release --into prod --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...
   ├─ 💤 5s in await
   └─ ✨ found! after 5s

🌊 release: 
   ├─ 👌 all checks passed
   ├─ 🌴 automerge enabled [added]
   └─ 🥥 let's watch
      ├─ 🫧 no runs inflight
      └─ ✨ done! Xs in action, Xs watched

🫧 and then...

🌊 release: v1.3.0
   ├─ 🐢 1 check(s) in progress
   └─ 🥥 let's watch
      ├─ 💤 publish.yml, Xs in action, Xs watched
      └─ ✨ done! publish.yml, Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-22] feat PR: merged, release PR: unfound (found after wait) when: [plan] --into prod then: exit 0: merged, release PR found after await 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...
   ├─ 💤 5s in await
   └─ ✨ found! after 5s

🌊 release: 
   ├─ 👌 all checks passed
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ [2mhint: use --apply to enable automerge and watch[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-22] feat PR: merged, release PR: unfound (found after wait) when: [watch] --into prod --watch then: exit 0: merged, release PR found after await, watch to merged 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...
   ├─ 💤 5s in await
   └─ ✨ found! after 5s

🌊 release: 
   ├─ 👌 all checks passed
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ 🥥 let's watch
      ├─ 🫧 no runs inflight
      └─ ✨ done! Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-22b] feat PR: merged, release PR: unfound (timeout) when: [plan] --into prod then: exit 2: merged, release PR await timeout 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...
   ├─ 💤 5s in await
   ├─ 💤 10s in await
   ├─ 💤 15s in await
   ├─ 💤 20s in await
   ├─ 💤 25s in await
   ├─ 💤 30s in await
   ├─ 💤 35s in await
   ├─ 💤 40s in await
   ├─ 💤 45s in await
   ├─ 💤 50s in await
   ├─ 💤 55s in await
   ├─ 💤 60s in await
   ├─ 💤 65s in await
   ├─ 💤 70s in await
   ├─ 💤 75s in await
   ├─ 💤 80s in await
   ├─ 💤 85s in await
   └─ ⚓ release pr did not appear in 90s
      └─ 🔴 release
            ├─ https://github.com/test/repo/actions/runs/12345
            └─ success
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-25] feat PR: merged, release PR: inflight when: [apply] --into prod --apply with transitions then: exit 0: watch, merge, then tags 1`] = `
"🐢 cowabunga!

🐚 git.release --into prod --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 🐢 1 check(s) in progress
   ├─ 🌴 automerge enabled [added]
   └─ 🥥 let's watch
      ├─ 💤 1 left, Xs in action, Xs watched
      └─ ✨ done! Xs in action, Xs watched

🫧 and then...

🌊 release: v1.3.0
   ├─ 🐢 1 check(s) in progress
   └─ 🥥 let's watch
      ├─ 💤 publish.yml, Xs in action, Xs watched
      └─ ✨ done! publish.yml, Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-25] feat PR: merged, release PR: inflight when: [plan] --into prod then: exit 0: show release progress 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 🐢 1 check(s) in progress
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ [2mhint: use --apply to enable automerge and watch[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-25] feat PR: merged, release PR: inflight when: [watch] --into prod --watch with transitions then: exit 0: watch cycles then passed 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 🐢 1 check(s) in progress
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ 🥥 let's watch
      ├─ 💤 1 left, Xs in action, Xs watched
      ├─ 💤 1 left, Xs in action, Xs watched
      ├─ 💤 1 left, Xs in action, Xs watched
      ├─ 💤 1 left, Xs in action, Xs watched
      └─ ✨ done! Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-28] feat PR: merged, release PR: passed:wout-automerge when: [apply] --into prod --apply then: exit 0: automerge added, merged, then tags 1`] = `
"🐢 cowabunga!

🐚 git.release --into prod --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   ├─ 🌴 automerge enabled [added]
   └─ 🥥 let's watch
      ├─ 💤 1 left, Xs in action, Xs watched
      └─ ✨ done! Xs in action, Xs watched

🫧 and then...

🌊 release: v1.3.0
   ├─ 👌 all checks passed
   └─ 🥥 let's watch
      ├─ 🫧 no runs inflight
      └─ ✨ done! publish.yml, Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-28] feat PR: merged, release PR: passed:wout-automerge when: [plan] --into prod then: exit 0: passed, hint apply 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ [2mhint: use --apply to enable automerge and watch[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-28] feat PR: merged, release PR: passed:wout-automerge when: [watch] --into prod --watch then: exit 0: passed (no watch needed) 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ 🥥 let's watch
      ├─ 🫧 no runs inflight
      └─ ✨ done! Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-31] feat PR: merged, release PR: passed:with-automerge when: [apply] --into prod --apply then: exit 0: automerge found, merged, then tags 1`] = `
"🐢 cowabunga!

🐚 git.release --into prod --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   ├─ 🌴 automerge enabled [found]
   └─ 🥥 let's watch
      ├─ 💤 await automerge, Xs in action, Xs watched
      ├─ 💤 await automerge, Xs in action, Xs watched
      └─ ✨ done! Xs in action, Xs watched

🫧 and then...

🌊 release: v1.3.0
   ├─ 👌 all checks passed
   └─ 🥥 let's watch
      ├─ 🫧 no runs inflight
      └─ ✨ done! publish.yml, Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-31] feat PR: merged, release PR: passed:with-automerge when: [plan] --into prod then: exit 0: passed, automerge found 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   ├─ 🌴 automerge enabled [found]
   └─ [2mhint: use --apply to watch[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-31] feat PR: merged, release PR: passed:with-automerge when: [watch] --into prod --watch then: exit 0: watch then merged 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   ├─ 🌴 automerge enabled [found]
   └─ 🥥 let's watch
      ├─ 💤 await automerge, Xs in action, Xs watched
      ├─ 💤 await automerge, Xs in action, Xs watched
      └─ ✨ done! Xs in action, Xs watched

🫧 and then...

🌊 release: v1.3.0
   ├─ 👌 all checks passed
   └─ 🥥 let's watch
      ├─ 🫧 no runs inflight
      └─ ✨ done! publish.yml, Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-34] feat PR: merged, release PR: failed when: [apply] --into prod --apply then: exit 2: failed, hint retry 1`] = `
"🐢 cowabunga!

🐚 git.release --into prod --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 test
   │        ├─ https://github.com/test/repo/actions/runs/123
   │        └─ publish
   ├─ 🌴 automerge unfound (use --apply to add)
   ├─ [2mhint: use --retry to rerun failed workflows[0m
   └─ [2mhint: use rhx show.gh.test.errors to see test output[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-34] feat PR: merged, release PR: failed when: [plan] --into prod then: exit 2: failed, hint retry 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 test
   │        ├─ https://github.com/test/repo/actions/runs/123
   │        └─ publish
   ├─ 🌴 automerge unfound (use --apply to add)
   ├─ [2mhint: use --retry to rerun failed workflows[0m
   └─ [2mhint: use rhx show.gh.test.errors to see test output[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-34] feat PR: merged, release PR: failed when: [watch] --into prod --watch then: exit 2: failed, hint retry 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 test
   │        ├─ https://github.com/test/repo/actions/runs/123
   │        └─ publish
   ├─ 🌴 automerge unfound (use --apply to add)
   ├─ [2mhint: use --retry to rerun failed workflows[0m
   └─ [2mhint: use rhx show.gh.test.errors to see test output[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-37r] feat PR: merged, release PR: failed with --retry when: [apply+retry] --into prod --retry --apply then: exit 0: rerun triggered then apply to success 1`] = `
"🐢 cowabunga!

🐚 git.release --into prod --mode apply --watch --retry

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 test
   │        ├─ https://github.com/test/repo/actions/runs/123
   │        ├─ publish
   │        └─ 👌 rerun triggered
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ 🥥 let's watch
      ├─ 💤 1 left, Xs in action, Xs watched
      ├─ 💤 1 left, Xs in action, Xs watched
      └─ ✨ done! Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-37r] feat PR: merged, release PR: failed with --retry when: [plan+retry] --into prod --retry then: exit 0: rerun triggered, hint watch 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --mode plan --retry

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 test
   │        ├─ https://github.com/test/repo/actions/runs/123
   │        ├─ publish
   │        └─ 👌 rerun triggered
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ [2mhint: use --watch to monitor rerun progress[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-37r] feat PR: merged, release PR: failed with --retry when: [watch+retry] --into prod --retry --watch then: exit 0: rerun triggered then watch to success 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --watch --retry

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 test
   │        ├─ https://github.com/test/repo/actions/runs/123
   │        ├─ publish
   │        └─ 👌 rerun triggered
   ├─ 🌴 automerge unfound (use --apply to add)
   └─ 🥥 let's watch
      ├─ 💤 1 left, Xs in action, Xs watched
      ├─ 💤 1 left, Xs in action, Xs watched
      └─ ✨ done! Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-40] feat PR: merged, release PR: rebase:behind when: [apply] --into prod --apply then: exit 2: needs rebase 1`] = `
"🐢 cowabunga!

🐚 git.release --into prod --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   ├─ 🐚 needs rebase
   │  └─ [2mhint: rhx git.branch.rebase begin[0m
   └─ 🌴 automerge unfound (use --apply to add)
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-40] feat PR: merged, release PR: rebase:behind when: [plan] --into prod then: exit 2: needs rebase 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   ├─ 🐚 needs rebase
   │  └─ [2mhint: rhx git.branch.rebase begin[0m
   └─ 🌴 automerge unfound (use --apply to add)
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-40] feat PR: merged, release PR: rebase:behind when: [watch] --into prod --watch then: exit 2: needs rebase 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   ├─ 🐚 needs rebase
   │  └─ [2mhint: rhx git.branch.rebase begin[0m
   └─ 🌴 automerge unfound (use --apply to add)
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-40] feat PR: merged, release PR: rebase:dirty when: [apply] --into prod --apply then: exit 2: needs rebase with conflicts 1`] = `
"🐢 cowabunga!

🐚 git.release --into prod --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   ├─ 🐚 needs rebase, has conflicts
   │  └─ [2mhint: rhx git.branch.rebase begin[0m
   └─ 🌴 automerge unfound (use --apply to add)
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-40] feat PR: merged, release PR: rebase:dirty when: [plan] --into prod then: exit 2: needs rebase with conflicts 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   ├─ 🐚 needs rebase, has conflicts
   │  └─ [2mhint: rhx git.branch.rebase begin[0m
   └─ 🌴 automerge unfound (use --apply to add)
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-40] feat PR: merged, release PR: rebase:dirty when: [watch] --into prod --watch then: exit 2: needs rebase with conflicts 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   ├─ 🐚 needs rebase, has conflicts
   │  └─ [2mhint: rhx git.branch.rebase begin[0m
   └─ 🌴 automerge unfound (use --apply to add)
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-43] feat+release PR: merged, tags: unfound when: [apply] --into prod --apply then: exit 0: merged, no tag workflows 1`] = `
"🐢 cowabunga!

🐚 git.release --into prod --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: v1.3.0
   ├─ 👌 all checks passed
   └─ 🥥 let's watch
      ├─ 💤 await, Xs in action, Xs watched
      ├─ 💤 await, Xs in action, Xs watched
      └─ ✨ done! Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-43] feat+release PR: merged, tags: unfound when: [plan] --into prod then: exit 0: merged, no tag workflows 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: v1.3.0
   └─ 👌 all checks passed
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-43] feat+release PR: merged, tags: unfound when: [watch] --into prod --watch then: exit 0: merged, no tag workflows 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: v1.3.0
   ├─ 👌 all checks passed
   └─ 🥥 let's watch
      ├─ 💤 await, Xs in action, Xs watched
      ├─ 💤 await, Xs in action, Xs watched
      └─ ✨ done! Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-46] feat+release PR: merged, tags: inflight when: [apply] --into prod --apply with transitions then: exit 0: watch tag workflows 1`] = `
"🐢 cowabunga!

🐚 git.release --into prod --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: v1.3.0
   ├─ 🐢 1 check(s) in progress
   └─ 🥥 let's watch
      ├─ 💤 publish.yml, Xs in action, Xs watched
      └─ ✨ done! publish.yml, Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-46] feat+release PR: merged, tags: inflight when: [plan] --into prod then: exit 0: merged, tag workflows in progress 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: v1.3.0
   └─ 🐢 1 check(s) in progress
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-46] feat+release PR: merged, tags: inflight when: [watch] --into prod --watch with transitions then: exit 0: watch tag workflows 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: v1.3.0
   ├─ 🐢 1 check(s) in progress
   └─ 🥥 let's watch
      ├─ 💤 publish.yml, Xs in action, Xs watched
      └─ ✨ done! publish.yml, Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-49] feat+release PR: merged, tags: passed when: [apply] --into prod --apply then: exit 0: all done 1`] = `
"🐢 cowabunga!

🐚 git.release --into prod --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: v1.3.0
   ├─ 👌 all checks passed
   └─ 🥥 let's watch
      ├─ 🫧 no runs inflight
      └─ ✨ done! publish.yml, Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-49] feat+release PR: merged, tags: passed when: [plan] --into prod then: exit 0: all done 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: v1.3.0
   └─ 👌 all checks passed
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-49] feat+release PR: merged, tags: passed when: [watch] --into prod --watch then: exit 0: all done 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: v1.3.0
   ├─ 👌 all checks passed
   └─ 🥥 let's watch
      ├─ 🫧 no runs inflight
      └─ ✨ done! publish.yml, Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-52] feat+release PR: merged, tags: failed when: [apply] --into prod --apply then: exit 2: tags failed 1`] = `
"🐢 cowabunga!

🐚 git.release --into prod --mode apply --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: v1.3.0
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 publish.yml
   │        ├─ https://github.com/test/repo/actions/runs/789
   │        └─ failure
   ├─ [2mhint: use --retry to rerun failed workflows[0m
   └─ [2mhint: use rhx show.gh.test.errors to see test output[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-52] feat+release PR: merged, tags: failed when: [plan] --into prod then: exit 0: informational (tags failed) 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --mode plan

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: v1.3.0
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 publish.yml
   │        ├─ https://github.com/test/repo/actions/runs/789
   │        └─ failure
   ├─ [2mhint: use --retry to rerun failed workflows[0m
   └─ [2mhint: use rhx show.gh.test.errors to see test output[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-52] feat+release PR: merged, tags: failed when: [watch] --into prod --watch then: exit 2: tags failed 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --watch

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: v1.3.0
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 publish.yml
   │        ├─ https://github.com/test/repo/actions/runs/789
   │        └─ failure
   ├─ [2mhint: use --retry to rerun failed workflows[0m
   └─ [2mhint: use rhx show.gh.test.errors to see test output[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-55r] feat+release PR: merged, tags: failed with --retry when: [apply+retry] --into prod --retry --apply then: exit 0: rerun triggered then apply to success 1`] = `
"🐢 cowabunga!

🐚 git.release --into prod --mode apply --watch --retry

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: v1.3.0
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 publish.yml
   │        ├─ https://github.com/test/repo/actions/runs/789
   │        ├─ failure
   │        └─ 👌 rerun triggered
   └─ 🥥 let's watch
      ├─ 💤 publish.yml, Xs in action, Xs watched
      ├─ 💤 publish.yml, Xs in action, Xs watched
      ├─ 💤 publish.yml, Xs in action, Xs watched
      └─ ✨ done! publish.yml, Xs in action, Xs watched
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-55r] feat+release PR: merged, tags: failed with --retry when: [plan+retry] --into prod --retry then: exit 0: rerun triggered, hint watch 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --mode plan --retry

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: v1.3.0
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 publish.yml
   │        ├─ https://github.com/test/repo/actions/runs/789
   │        ├─ failure
   │        └─ 👌 rerun triggered
   └─ [2mhint: use --watch to monitor rerun progress[0m
"
`;

exports[`git.release.p3.scenes.on_feat.into_prod scene.2: on feat branch, into prod given: [row-55r] feat+release PR: merged, tags: failed with --retry when: [watch+retry] --into prod --retry --watch then: exit 0: rerun triggered then watch to success 1`] = `
"🐢 heres the wave...

🐚 git.release --into prod --watch --retry

🌊 release: feat(ocean): add surfboards
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: chore(release): v1.3.0
   ├─ 👌 all checks passed
   └─ 🌴 already merged

🫧 and then...

🌊 release: v1.3.0
   ├─ ⚓ 1 check(s) failed
   │  └─ 🔴 publish.yml
   │        ├─ https://github.com/test/repo/actions/runs/789
   │        ├─ failure
   │        └─ 👌 rerun triggered
   └─ 🥥 let's watch
      ├─ 💤 publish.yml, Xs in action, Xs watched
      ├─ 💤 publish.yml, Xs in action, Xs watched
      ├─ 💤 publish.yml, Xs in action, Xs watched
      └─ ✨ done! publish.yml, Xs in action, Xs watched
"
`;
